--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -56,3 +56,14 @@ section {
 .social-media-buttons a:hover {
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
 }
+
+.section-title {
+    color: #e9a209;
+    /* font-size: 1.563rem; */
+    font-size: 2.3rem;
+}
+
+.section-subtitle {
+    /* font-size: 1.1875rem; */
+    font-size: 1.6rem;
+}
