--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -51,7 +51,7 @@
 }
 
 .feedback-content p span {
-    color: #e9a209;
+    color: var(--color-primary-6);
 }
 
 @media screen and (max-width: 1170px) {
