--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -30,12 +30,12 @@
 
 .dish-heart {
     position: absolute;
-    background-color: #e9a209;
+    background-color: var(--color-primary-6);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.563rem;
-    color: #fff9ea;
+    color: var(--color-primary-1);
     width: 70px;
     height: 70px;
     right: -10px;
@@ -49,7 +49,7 @@
 }
 
 .dish-rate i {
-    color: #e9a209;
+    color: var(--color-primary-6);
 }
 
 .dish-price {
