--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,7 +27,7 @@ header {
 
 .nav-item a {
     text-decoration: none;
-    color: var(--color-neutral-1)ad;
+    color: #1d1d1dad;
     font-weight: 600;
 }
 
