--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -48,6 +48,7 @@
 .feedback-content p {
     display: flex;
     justify-content: space-between;
+    padding-top: 3px;
 }
 
 .feedback-content p span {
